tests/fixtures/invalid/pow_str_bytes_none.py
# Cannot call pow() with Str, Bytes, None
x = pow("hello", b"hello", None)
